--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,13 @@ html{
 
 .pomodoro-container{
     min-width: 320px;
-    width: 70%;
+    width: 80%;
     margin: 50px auto 0 auto;
-    height: 200px;
+    height: 300px;
     border: 1px solid black;
+    border-radius: 16px 4px 16px 4px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
