--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 html{
     font-size: 62.5%;
-    margin: 0;
+}
+
+body{
+    margin: 5px;
     padding: 0;
 }
 
-
 .pomodoro-container{
-    min-width: 320px;
-    width: 80%;
-    margin: 50px auto 0 auto;
+    width: 100%;
     height: 300px;
     border: 1px solid black;
     border-radius: 16px 4px 16px 4px;
@@ -16,4 +16,5 @@ html{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    box-sizing: border-box;
 }
