--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,18 @@ html{
 }
 
 body{
-    margin: 5px;
+    margin: 10px;
     padding: 0;
 }
 
 .pomodoro-container{
+    text-align: center;
     width: 100%;
     height: 300px;
-    border: 1px solid black;
-    border-radius: 16px 4px 16px 4px;
-    text-align: center;
+    margin-top: 20px;
+    background: linear-gradient(to right ,#71c5ee, #025091);
+    border-radius: 26px 6px 26px 6px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    box-sizing: border-box;
 }
