--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html{
     font-size: 62.5%;
+    font-family: 'Inter';
 }
 
 body{
@@ -7,14 +8,107 @@ body{
     padding: 0;
 }
 
-.pomodoro-container{
+input{
+    border: none;
+    background: 0;
     text-align: center;
+    font-size: 1.6rem;
+    color: white;
+    font-weight: bold;
+    width: 50px;
+}
+input:focus{
+    outline: 0 none;
+}
+
+.pomodoro-container{
     width: 100%;
     height: 300px;
-    margin-top: 20px;
-    background: linear-gradient(to right ,#71c5ee, #025091);
-    border-radius: 26px 6px 26px 6px;
+    margin-top: 10px;
+    padding: 10px15px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    row-gap: 20px;
+    text-align: center;
+    background: linear-gradient(to right, #30CFD0 0%, #440a8a 100%);
+    border-radius: 32px 10px 32px 10px;
+    box-shadow: 2.5px 2.5px 8px #9fdbfa;
+    
 }
+
+.pomodoro-container .clock-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.clock-container h2{
+
+    margin: 5px 20px 0px 15px;
+    font-size: 6.0rem;
+    color: white;
+    font-weight: bold;
+}
+
+.clock-container .input-container{
+    align-items: end;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    color: white;
+    margin-top: -20px;
+    font-weight: bold;
+    width: 100%;
+}
+.button-container{
+    background-color: white;
+    margin: auto;
+    width: 50%;
+    margin: 5px 0px 15px 0pc;
+    padding: 15px 35px 15px 35px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+.button-container:hover{
+    background-color: rgba(255, 255, 255, 0.897);
+}
+
+.button-container:active{
+    background-color: white;
+}
+
+.button-start{
+    border: none;
+    font-size: 1.8rem;
+    font-weight: bold;
+	background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+    background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+
+}
+
+.settings-container{
+    display: flex;
+    justify-content: center;
+    column-gap: 2.4rem;
+}
+
+.settings-container label{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.settings-container span{
+    font-size: 1.2rem;
+    color: white;
+    font-weight: bold;
+}
+
+.settings-container
+
