construccion desde 0 del js

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ input:focus{
 }
 
 .settings-container label{
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
