--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html{
     font-size: 62.5%;
     font-family: 'Inter';
+    box-sizing: border-box;
 }
 
 body{
@@ -8,59 +15,72 @@ body{
     padding: 0;
 }
 
-input{
-    border: none;
-    background: 0;
-    text-align: center;
-    font-size: 1.6rem;
-    color: white;
-    font-weight: bold;
-    width: 50px;
-}
-input:focus{
-    outline: 0 none;
-}
-
 .pomodoro-container{
     width: 100%;
     height: 380px;
     margin-top: 10px;
-    padding: 10px 15px;
+    padding: 5px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    row-gap: 20px;
+    justify-content: space-around;
     text-align: center;
-    background: linear-gradient(to right, #30CFD0 0%, #440a8a 100%);
+    background: linear-gradient(to right, #30CFD0 0%, #52169b 100%);
     border-radius: 32px 10px 32px 10px;
-    box-shadow: 4px 4px 10px #9fdbfa;
-    
+    box-shadow: 4px 4px 10px #9fdbfa; 
 }
+
+.options-container{
+    width: 100%;
+    min-width: 320px;
+    height: 50px;
+}
+
+.options-container ul{
+    margin: 20px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style: none;
+}
+
+.options-container ul li a{
+    padding: 9px;
+    margin: 0 3px;
+    border: 1px solid white;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+}
+
+.options-container ul li a:hover{
+    background-color: rgba(255, 255, 255, 0.897);
+    color: #30CFD0;
+}
+
+.options-container ul li a:active{
+    background-color: white;
+}
+
+.active{
+    background-color: rgba(255, 255, 255, 0.897);
+    color: #30CFD0 !important;
+}
+
 
 .pomodoro-container .clock-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 5px;
 }
 
 .clock-container h2{
-
-    margin: 5px 2px 0px 30px;
+    margin: 0 auto;
     font-size: 6.0rem;
     color: white;
     font-weight: bold;
-}
-
-.clock-container .input-container{
-    align-items: end;
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    color: white;
-    margin-top: -20px;
-    font-weight: bold;
-    width: 100%;
 }
 .button-container{
     background-color: white;
@@ -92,25 +112,85 @@ input:focus{
 
 }
 
-.settings-container{
-    display: flex;
-    justify-content: center;
-    column-gap: 2.4rem;
-}
-
-.settings-container label{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.settings-container span{
-    font-size: 1.2rem;
-    color: white;
-    font-weight: bold;
-}
-
 .inactive{
     display: none;
+}
+
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #111111bd;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .4s .5s;
+    --transform: translateY(-100vh);
+    --transition: transform .6s;
+}
+.modal-show{
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .4s .4s;
+    --transform: translateY(0);
+    --transition: transform .6s 0.6s;
+
+}
+
+.modal-container{
+    margin: 20px auto auto auto;
+    width: 90%;
+    max-width: 600px;
+    background-color: white;
+    border-radius: 6px;
+    padding: 4em 5em;
+    display: grid;
+    transform: var(--transform);
+    transition: var(--transition);
+}
+
+.modal-container form{
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-container h2{
+    font-size: 2.0rem;
+}
+
+.modal-container form label{
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+.modal-container form label input{
+    padding: 4px;
+    width: 40px;
+    border: none;
+    border-radius: 6px;
+    margin: 0 10px;
+    background-color: rgb(235, 230, 230);
+    text-align: center;
+}
+
+.button-close-container{
+    margin-top: 10px;
+    width: 20%;
+    padding: 5px;
+    background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+    color: white;
+    font-weight: bold;
+    margin: 0 auto;
+    border: none;
+    border-radius: 6px;
+}
+
+.button-close-container:hover{
+    cursor: pointer;
 }
