--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,12 @@ body{
 
 .modal-container h2{
     font-size: 2.0rem;
+    margin-bottom: 10px;
+}
+
+.modal-title{
+    text-align: center;
+    margin-bottom: 30px !important;
 }
 
 .modal-container form label{
@@ -182,7 +188,7 @@ body{
 .button-close-container{
     margin-top: 10px;
     width: 20%;
-    padding: 5px;
+    padding: 10px;
     background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
     color: white;
     font-weight: bold;
