--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body{
     font-size: 6.0rem;
     color: white;
     font-weight: bold;
+    letter-spacing: 0.5rem;
 }
 .button-container{
     background-color: white;
